# mmap_cache_file_manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/yeelight_mmap_cache_file_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: file_util.dart  main.dart
ios/: mmap_cache_file_manager.podspec
ios/Classes/: mmap_cache_file_manager.c
lib/: mmap_cache_file_manager.dart  mmap_cache_file_manager_bindings_generated.dart
src/: CMakeLists.txt  config.h  mmap.c  mmap.h  mmap_cache_file_manager.c  mmap_cache_file_manager.h  util.c  util.h
